[package]
name = "doh-proxy"
version = "0.9.0"
authors = ["Frank Denis <github@pureftpd.org>", "Jun Kurihara (for JWT Auth)"]
description = "A DNS-over-HTTPS (DoH) and ODoH (Oblivious DoH) proxy"
keywords = ["dns", "https", "doh", "odoh", "proxy"]
license = "MIT"
homepage = "https://github.com/junkurihara/doh-server"
repository = "https://github.com/junkurihara/doh-server"
categories = ["asynchronous", "network-programming", "command-line-utilities"]
edition = "2018"
readme = "README.md"

[features]
default = ["tls"]
tls = ["libdoh/tls"]

[dependencies]
libdoh = { path="src/libdoh", version="0.9.0", default-features=false }
clap = "2.33.3"
dnsstamps = "0.1.7"
jemallocator = "0.3.2"
jsonwebtoken = "7.2.0"
env_logger = "0.8"
log = "0.4"

[package.metadata.deb]
extended-description = """\
A fast and secure DoH (DNS-over-HTTPS) and ODoH server written in Rust."""
assets = [
  ["target/release/doh-proxy", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/doh-proxy/README.md", "644"],
]
section = "network"
depends = "$auto"
priority = "optional"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
